shared/kafka/k8s/kafka/svc.yml

apiVersion: v1
kind: Service
metadata:
  name: kafka-hs
  namespace: kafka
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: server
  clusterIP: None
  selector:
    app: kafka

---

apiVersion: v1
kind: Service
metadata:
  name: kafka-svc-0
spec:
  ports:
  - port: 9093
    targetPort: 9092
    name: kafka-port
    protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: kafka-0
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc-1
spec:
  ports:
  - port: 9093
    targetPort: 9092
    name: kafka-port
    protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: kafka-1
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc-2
spec:
  ports:
  - port: 9093
    targetPort: 9092
    name: kafka-port
    protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: kafka-2
  type: NodePort
