shared/kafka/k8s/kafka/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
  - host: dev.kafka.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ingress
            port:
              number: 9092
